--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -194,7 +194,7 @@ Consider the example in \ref{ex:mg-acc-nom}. In this example, the internal nomin
 The internal case is nominative, as the predicate \tit{sein} `to be' takes nominative subjects.
 The external case is accusative, as the predicate \tit{einladen} `to invite' takes accusative objects.
 The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-The example adheres to the case cale, but the more complex case (here the accusative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
+The example adheres to the case scale, but the more complex case (here the accusative) is not the internal case. As only the internal can win the case competition in Modern German, the example in ungrammatical.
 
 \exg. *Ich {lade ein}, wen \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
 I.\ac{nom} invite.1\ac{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} I.\ac{dat} nice be.3\ac{sg}\scsub{[nom]}\\
@@ -341,40 +341,90 @@ The relative pronoun \tit{hòn} `\tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg}' appears i
 \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} the god.\tsc{pl} love.3\tsc{pl} die.3\tsc{sg} young\\
 `He whom the gods love dies young.' (Menander, The Double Deceiver, fragment 125)\label{ex:ancient-greek}
 
-There are examples of languages in which the external surfaces. At first sight, it may look like case competition and external wins. Show examples.
+There are examples of languages in which the relative pronoun always surfaces in the external case. However, they do not show case competition.
+In what follows, I first show that relative pronouns in these languages show the relative pronoun in the external case. Then, I show examples that indicate they do not adhere to the case scale.
 
-\exg. Eδósa leftá ópjon γnórisa.\\
-gave.1\tsc{sg}\scsub{gen} money who.\tsc{gen.pl} met.1\tsc{sg}\scsub{acc}\\
-`I gave money to whoever I met.' \hfill m:\tsc{gen}, e:\tsc{acc}, PL
+I give examples from Modern Greek and Old English. In both languages, the relative pronoun takes the external case. I start with Modern Greek.
 
-\exg. ðæt man for-give ðam ðe wið hine gegylte\\
- that one forgive \tsc{rel}.\ac{acc} \tsc{comp} against him sins\\
- `that one forgive him who sins against him'\citep{harbert1983}
+Consider the example in \ref{ex:greek-gen-nom}. In this example, the internal nominative case competes against the external genitive case.
+The internal case is nominative, as the predicate \tit{voíθisó} `to help' takes nominative subjects.
+The external case is accusative, as the predicate \tit{eðósó} `to give' takes genitive objects.
+The relative pronoun \tit{hòn} `\tsc{rel}.\tsc{gen}.\tsc{m}.\tsc{pl}' appears in the external case: the genitive. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
 
-However, these languages do not adhere to the case scale. The relative pronoun simply always appears in the external case, irrespective of whether the external case is more complex than the internal case.
+\exg. ´Eðósa leftá ópju \tbf{me} \tbf{voíθise}.\\
+give.\tsc{past}.1\tsc{sg}\scsub{gen} money \tsc{rel}.\tsc{gen}.\tsc{m}.\tsc{pl} \tsc{cl}.1\tsc{sg}.\tsc{acc} help.\tsc{past}.3\tsc{sg}\scsub{nom}\\
+`I gave money to whoever helped me.' \flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{80}}\label{ex:greek-gen-nom}
 
-`meet' takes accusative case, `give' takes genitive case. Going with the case competition would be: let the relative pronoun appear in genitive case. This is ungrammatical. Instead, the relative pronoun appear in the external case, and the internal case gets a clitic.
+The Modern Greek relative pronoun appears in the external case. Moreover, the external case is the more complex case than the internal case. In \ref{ex:greek-gen-nom}, the genitive is more complex than the nominative.
+So far, the data pattern is consistent with the third pattern: the language only allows the external case to surface when it wins the case competition. The next examples, however, falsify this hypothesis. Examples in which the internal case is more complex are not ungrammatical. Rather, the relative pronoun still appears in the external (less complex) case.
 
-\ex.
-\ag. *Γnórisa \tbf{ópju} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
-met.1\tsc{sg}\scsub{acc} \tsc{rel}.\tsc{gen}.\tsc{sg}.\tsc{m} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
-`I met whoever they gave the scholarship to.'
-\bg. Γnórisa ópjon \tbf{tu} \tbf{éδosan} \tbf{tin} \tbf{ipotrofia}.\\
-met.1\tsc{sg}\scsub{acc} who.\tsc{acc.sg} \tsc{cl.3sg.gen} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
-`I met whoever they gave the scholarship to.'
+Consider the example in \ref{ex:greek-nom-gen-u}. In this example, the internal genitive case competes against the external nominative case.
+The internal case is genitive, as the predicate \tit{eðósó} `to give' takes genitive objects.
+The external case is accusative, as the predicate \tit{efχarístisó} `to thank' takes nominative subjects.
+The relative pronoun \tit{ópjon} `\tsc{rel}.\tsc{gen}.\tsc{pl}.\tsc{m}' appears in the internal case: the genitive. The relative pronoun is marked in bold, just like the relative clause, showing that the relative pronoun patterns with the relative clause.
+The example adheres to the case scale, but the more complex case (here the accusative) is not the external case. As the relative pronoun in Modern Greek always appears in the external case, the example in ungrammatical.
 
-\tit{tōbrȳsan} `to pulversize' takes accusative objects, \tit{onuppan} `upon' takes dative objects. But we see that the relative pronoun appears in accusative case
+\exg. *Me efχarístisan \tbf{ópjon} \tbf{íχa} \tbf{ðósi} \tbf{leftá}.\\
+ \tsc{cl}.1\tsc{sg}.\tsc{acc} thank.\tsc{past}.3\tsc{pl}\scsub{nom} \tsc{rel}.\tsc{gen}.\tsc{pl}.\tsc{m} have.\tsc{past}.1\tsc{sg} give.\tsc{ptcp}\scsub{gen} money\\
+ `Whoever I had given money to, thanked me.' \flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{79}}\label{ex:greek-nom-gen-u}
+
+This example shows that Modern Greek is not like Gothic, Old High German and Ancient Greek. That it, it is not the case that the relative pronoun appears in the most complex case, which can be either the internal case or the external case.
+
+However, Modern Greek is also not the opposite of German, in that it only allows the external case to win the case competition but not the internal case. This is illustrated by the example in \ref{ex:greek-nom-gen}.
+
+Consider the example in \ref{ex:greek-nom-gen}. This example is identical to \ref{ex:greek-nom-gen-u}, except for that the relative pronoun appears in the external less complex nominative case, and that there is a clitic in the internal more complex genitive case.
+This example is grammatical in Modern Greek.\footnote{
+In Modern German, it is possible to insert a light head. However, then the relative pronoun has to change as well (from a \tsc{wh}-pronoun into a \tsc{d}-pronoun).
+}
+
+\exg. Me efχarístisan ópji \tbf{tus} \tbf{íχa} \tbf{ðósi} \tbf{leftá}.\\
+ \tsc{cl}.1\tsc{sg}.\tsc{acc} thank.\tsc{past}.3\tsc{pl}\scsub{nom} \tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m} \tsc{cl}.\tsc{gen}.3\tsc{pl} have.\tsc{past}.1\tsc{sg} give.\tsc{ptcp}\scsub{gen} money\\
+ `Whoever I had given money to, thanked me.'\flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{80}}\label{ex:greek-nom-gen}
+
+Another example that shows that Modern Greek does not show case competition in its headless relatives is given in \ref{ex:greek-nom-acc}.
+The internal case is accusative, as the predicate \tit{irθó} `to invite' takes accusative objects.
+The external case is accusative, as the predicate \tit{kálesó} `to come' takes nominative subjects.
+The relative pronoun \tit{ópji} `\tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m}' appears in the external case: the nominative. The relative pronoun not is marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
+
+\exg. Irθan ópji káleses.\\
+come.\tsc{past}.3\tsc{pl}\scsub{nom} \tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m} invite.\tsc{past}.2\tsc{sg}\scsub{acc}\\
+`Whoever you invited came.'\flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{80}}\label{ex:greek-nom-acc}
+
+In sum, the relative pronoun appears in the the external case, and it does not adhere to the case scale.
+
+The same pattern appears in the Old English.
+Consider the example in \ref{ex:oe-dat-nom}. In this example, the internal nominative case competes against the external dative case.
+The internal case is nominative, as the predicate \tit{gegyltan} `to sin' takes nominative subjects.
+The external case is accusative, as the predicate \tit{for-gifan} `to forgive' takes dative objects.
+The relative pronoun \tit{ðam} `\tsc{rel}.\ac{dat}.\tsc{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
+
+\exg. ðæt is, ðæt man for-gife, ðam \tbf{ðe} \tbf{wið} \tbf{hine} \tbf{gegylte}\\
+ that is that one forgive.\tsc{subj}.\tsc{sg}\scsub{dat} \tsc{rel}.\ac{dat}.\tsc{pl} \tsc{comp} against 3\tsc{sg.m.acc} sin.\tsc{3sg}\scsub{nom}\\
+ `that is, that one₂ forgive him₁, who sins against him₂' \flushfill{Old English, adapted from \pgcitealt{harbert1983}{549}} \label{ex:oe-dat-nom}
+
+The Old English relative pronoun appears in the external case. Moreover, the external case is the more complex case than the internal case. In \ref{ex:oe-dat-nom}, the dative is more complex than the nominative.
+So far, the data pattern is consistent with the third pattern: the language only allows the external case to surface when it wins the case competition. The next example, however, falsify this hypothesis. Examples in which the internal case is more complex are not ungrammatical. Rather, the relative pronoun still appears in the external (less complex) case.
+
+Consider the example in \ref{ex:oe-acc-dat}. In this example, the internal nominative case competes against the external dative case.
+The internal case is dative, as the predicate \tit{onuppan} `upon' takes dative objects.
+The external case is accusative, as the predicate \tit{tōbrȳsan} `to pulversize' takes accusative objects.
+The relative pronoun \tit{ðone} `\tsc{rel}.\ac{acc}.\tsc{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. he tobryst ðone \tbf{ðe} \tbf{he} \tbf{onuppan} \tbf{fylð}\\
  it pulverizes\scsub{[acc]} \tsc{rel}.\ac{acc} \tsc{compl} it upon\scsub{[dat]} falls\\
-`It pulverizes him whom it falls upon.' \flushfill{Old English, adapted from \pgcitealt{harbert1983}{550}}\label{ex:old-english}
+`It pulverizes him whom it falls upon.' \flushfill{Old English, adapted from \pgcitealt{harbert1983}{550}} \label{ex:oe-acc-dat}
 
- adapted from St.Mat. 1249 after xx  550
+In sum, in the relative pronoun in Old English appears in the the external case, and it does not adhere to the case scale.
 
-It is of course impossible to prove the non-existence of anything, so it could be an accident, but I am going to set up an system in which this does not exist.
+Taking this all together, I have not encountered a language that only allows the external case to surface when it wins the case competition. Ancient Greek allows the internal or the external case to surface when it wins the case competition, even though examples in the internal case are attested less often than ones in the external case. Modern Greek and Old English are examples of languages in which the relative pronoun appears in the external case, but that do not take the case scale into account.
 
-%old english looks pretty similar to gothic here. Both have a complementizer, both have a relative pronoun preceding it. what I'll say later is that the old english complementizer also can also spell out case features and the gothic one cannot.
 
 \section{Summary}
 
-Case competition: two patterns. Gothic and Old High German allow both directions, Modern German only allows the internal case to surface. To the best of my knowledge, there are no languages in which only the external case can surface.
+In case competition in headless relatives two factors play a role. The first one is which case wins the case competition. It is a crosslinguistically stable fact that this is determiner by the case scale in \ref{ex:case-scale-two-patterns-sum}, repeated from Chapter \ref{ch:recurring}. A case more to the right on the scale wins over a case more to the left on the scale.
+
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns-sum}
+
+The second factor is whether the internal and the external case are allowed to surface when they wins the case competition. This differs across languages. There are three possible patterns: (1) a pattern in which the external or the internal case are allowed to surface when they win, (2) a pattern in which only the internal case is allowed to surface when it wins, and (3) a pattern in which only the external case is allowed to surface when it wins.
+
+Gothic and Old High German are examples of languages of the first type. Modern German is an example of a language of the second type. To my knowledge, the third pattern is not attested. It is impossible to prove that this pattern does not exist (or has not existed) in any natural language, and it could be an accidental gap. However, in the next section, I set up a system that derives the two attested patterns, and excludes the third one.
