nog keer chapter 4 doorgelezen
hupsa :)

--- a/introduction.tex
+++ b/introduction.tex
@@ -112,7 +112,7 @@ For both I will show that morphology is leading. What we observe in syntax is a 
 
 \section{The scope of this dissertation}
 
-\subsection{Case attraction}
+\subsection{Case attraction}\label{sec:attraction}
 
 Case attraction in headed relatives seems related, but I will not account for it.
 
