--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -284,6 +284,9 @@ So, Polish has an `out', which German does not have.
 What is this external element? This is the external head, that actually shows up in some languages: double-headed relative clauses.
 
 
+\subsection{Featural content of the head}
+
+indefinite noun, as cinque and the content of the external head visible in some languages
 
 \subsection{Syntactic position of external head}
 
