--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -326,7 +326,7 @@ In sum, Modern German has two requirements for case competition in its headless 
 
 \section{No only external case wins}
 
-Logically, a third type of language exist. That is a language that only allows the external case to surface when it wins the case competition. To my knowledge, this pattern is not attested in any (extinct) natural language. In this section I discuss Ancient Greek, for which is has been claimed in the literature that it follows the pattern. I give examples that show that Ancient Greek actually patterns with Gothic and Old High German. I also discuss languages in which the relative pronouns appear in the external case. However, they are also not languages of the `third type', as they do not show case competition.
+Logically, a third type of language exist. That is a language that only allows the external case to surface when it wins the case competition. To my knowledge, this pattern is not attested in any (extinct) natural language. In this section I discuss Ancient Greek, for which is has been claimed in the literature that it follows the pattern. I give examples that show that Ancient Greek actually patterns with Gothic and Old High German. I also discuss languages in which the relative pronouns appear in the external case. However, they are also not languages of the third type, as they do not show case competition.
 
 It has been claimed that Ancient Greek only allows the external case to surface when it wins the case competition  \citep[cf.][]{cinqueforthcoming}. It does indeed seem to be the case that examples in which the external case wins over the internal case are more frequent (see \citealt{kakarikos2014} for a number of them with different combinations of cases coming together) than examples in which the internal case wins over the external case.\footnote{
 In this dissertation I do not address the question of why certain constructions and configurations are more frequent than others. My goal is to set up a system that generates the grammatical patterns and excludes the ungrammatical or unattested patterns.
@@ -353,7 +353,7 @@ The internal case is dative, as the preposition \tit{onuppan} `upon' takes dativ
 The external case is accusative, as the predicate \tit{tōbrȳsan} `to pulversize' takes accusative objects.
 The relative pronoun \tit{ðone} `\tsc{rel}.\ac{acc}.\tsc{sg}' appears in the external case: the accusative.
 The example appears in the external case, but does not adhere to the case scale: the relative pronoun appears in the less complex external  case (the accusative), and not in the more complex internal case (the dative).
-The example is grammatical, because the relative pronoun appears in the external case. The case scale is irrelevant for the case in which the relative pronoun appears.
+The example is grammatical, because in Old English the relative pronoun appears in the external case. The case scale is irrelevant for the case in which the relative pronoun appears in Old English.
 
 \exg. he tobryst ðone \tbf{ðe} \tbf{he} \tbf{onuppan} \tbf{fylð}\\
  it pulverizes\scsub{[acc]} \tsc{rel}.\ac{acc} \tsc{compl} it upon\scsub{[dat]} falls\\
@@ -365,7 +365,7 @@ The internal case is accusative, as the predicate \tit{irθó} `to invite' takes
 The external case is accusative, as the predicate \tit{kálesó} `to come' takes nominative subjects.
 The relative pronoun \tit{ópji} `\tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m}' appears in the external case: the nominative.
 The example appears in the external case, but does not adhere to the case scale: the relative pronoun appears in the less complex external  case (the nominative), and not in the more complex internal case (the accusative).
-The example is grammatical, because the relative pronoun appears in the external case. The case scale is irrelevant for the case in which the relative pronoun appears.
+The example is grammatical, because in Modern Greek the relative pronoun appears in the external case. The case scale is irrelevant for the case in which the relative pronoun appears in Modern Greek .
 
 \exg. Irθan ópji \tbf{káleses}.\\
 come.\tsc{past}.3\tsc{pl}\scsub{nom} \tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m} invite.\tsc{past}.2\tsc{sg}\scsub{acc}\\
@@ -383,9 +383,9 @@ The internal case is genitive, as the predicate \tit{eðósó} `to give' takes g
 The external case is accusative, as the predicate \tit{efχarístisó} `to thank' takes nominative subjects.
 The relative pronoun \tit{ópjon} `\tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m}' appears in the internal case: the genitive. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
 The example appears in the external case, but does not adhere to the case scale: the relative pronoun appears in the less complex external case (the nominative), and not in the more complex internal case (the genitive). The relative clause obligatorily contains the genitive clitic \tit{tus} `\tsc{cl}.\tsc{gen}.3\tsc{pl}'.\footnote{
-In Modern German, it is possible to insert a light head. However, then the relative pronoun has to change as well (from a \tsc{wh}-pronoun into a \tsc{d}-pronoun). I assume this is a different construction, and the Modern Greek one with the clitic inserted is not.
+In Modern German, it is possible to insert a light head to resolve a situation with a more complex external case. However, then the relative pronoun has to change as well (from a \tsc{wh}-pronoun into a \tsc{d}-pronoun). I assume this is a different construction, and the Modern Greek one with the clitic inserted is not.
 }
-The example is grammatical, because the relative pronoun appears in the external case. The case scale is irrelevant for the case in which the relative pronoun appears.
+The example is grammatical, because in Modern Greek the relative pronoun appears in the external case. The case scale is irrelevant for the case in which the relative pronoun appears in Modern Greek .
 
 \exg. Me efχarístisan ópji \tbf{tus} \tbf{íχa} \tbf{ðósi} \tbf{leftá}.\\
  \tsc{cl}.1\tsc{sg}.\tsc{acc} thank.\tsc{past}.3\tsc{pl}\scsub{nom} \tsc{rel}.\tsc{nom}.\tsc{pl}.\tsc{m} \tsc{cl}.\tsc{gen}.3\tsc{pl} have.\tsc{past}.1\tsc{sg} give.\tsc{ptcp}\scsub{gen} money\\
